接收消息新增时间

--- a/conf/conf.conf
+++ b/conf/conf.conf
@@ -1,16 +1,16 @@
 [phoenix]
 enable = True
-url = http://jp-bigdata-01:8765/
+url = http://jx-bigdata-01:8765/
 
 [kafka]
-bootstrap = jp-bigdata-03:9092,jp-bigdata-04:9092,jp-bigdata-05:9092
-topic = msreply
-group_id = groupltest
+bootstrap = jx-bigdata-03:9092,jx-bigdata-04:9092,jx-bigdata-05:9092,jx-bigdata-06:9092
+topic = ods_msresults_db
+group_id = groupJp
 
 [mysql]
 enable = True
-ip = jp-mysql-01
+ip = jx-bigdata-07
 port = 3306
 username = root
-password = bigdata
-database = jpdb
+password = jx@Bigdata07
+database = ods
