--- a/conf/conf.conf
+++ b/conf/conf.conf
@@ -1,16 +1,17 @@
 [phoenix]
 enable = True
-url = http://jx-bigdata-01:8765/
+url = http://jp-bigdata-01:8765/
 
 [kafka]
-bootstrap = jx-bigdata-03:9092,jx-bigdata-04:9092,jx-bigdata-05:9092,jx-bigdata-06:9092
-topic = ods_msresults_db
+bootstrap = jp-bigdata-03:9092,jp-bigdata-04:9092,jp-bigdata-05:9092,jp-bigdata-06:9092
+topic_reply = msreply
+topic_send = mssend
 group_id = groupJp
 
 [mysql]
 enable = True
-ip = jx-bigdata-07
+ip = jp-mysql-01
 port = 3306
 username = root
-password = jx@Bigdata07
-database = ods
+password = bigdata
+database = jpdb
